<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_name"
                style="@style/TitleTextView"
                android:layout_marginEnd="5dp"
                tools:text="@string/drakor_name_temp" />

            <TextView
                android:id="@+id/tv_year"
                style="@style/TitleTextView"
                android:layout_toEndOf="@+id/tv_name"
                tools:text="@string/drakor_year_temp" />

            <ImageButton
                android:id="@+id/action_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/share" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="match_parent"
            android:layout_height="575dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitCenter"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_synopsis"
            style="@style/ContentTextView"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/drakor_synopsis_temp" />

        <TextView
            style="@style/TitleTextView"
            android:layout_marginBottom="5dp"
            android:text="@string/details" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/ContentTextView" />

        <TextView
            android:id="@+id/tv_genres"
            style="@style/ContentTextView" />


        <TextView
            android:id="@+id/tv_episodes"
            style="@style/ContentTextView" />

        <TextView
            android:id="@+id/tv_aired"
            style="@style/ContentTextView" />

        <TextView
            android:id="@+id/tv_duration"
            style="@style/ContentTextView" />
    </LinearLayout>
</ScrollView>