<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_drakor_photo"
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_drakor_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/iv_drakor_photo"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="17sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/iv_drakor_photo"
            card_view:layout_constraintTop_toTopOf="@+id/iv_drakor_photo"
            tools:text="@string/drakor_name_temp" />

        <TextView
            android:id="@+id/tv_drakor_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/silver_foil"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_drakor_name"
            card_view:layout_constraintStart_toStartOf="@+id/tv_drakor_name"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_drakor_name"
            tools:text="@string/drakor_desctiption_temp" />

        <TextView
            android:id="@+id/tv_drakor_synopsis"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="3dp"
            android:ellipsize="end"
            android:maxLines="3"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_drakor_description"
            card_view:layout_constraintStart_toStartOf="@+id/tv_drakor_description"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_drakor_description"
            tools:text="@string/drakor_synopsis_temp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>